--- a/src/app/components/global/post/post.component.css
+++ b/src/app/components/global/post/post.component.css
@@ -49,9 +49,23 @@
   flex-direction: column;
 }
 
+.isReply{
+  background-color:gray;
+  color:black;
+  border-radius:5px;
+  margin-left:1rem;
+  height: fit-content;
+  padding:0.5rem;
+}
+
+.isReply p{
+  margin-bottom:0;
+}
+
 @media (max-width:580px){
   .post{
     border:none;
+    width:calc(100vw - 2rem);
   }
 }
 
@@ -81,4 +95,25 @@
 
 .mdc-button {
   min-width: 0 !important;
+}
+
+.basic-user-info{
+  margin-top:1rem;
+  display:flex;
+  flex-direction:row;
+  gap:1rem;
+  align-items:flex-end;
+}
+
+.basic-user-info img{
+  width:50px;
+  height:50px;
+  border-radius:50%;
+}
+
+.actions-comment{
+  display:flex;
+  flex-direction:row;
+  justify-content: space-between;
+  margin:left 1rem right 1rem;
 }
