--- a/src/app/components/navigation/toolbar/toolbar.component.html
+++ b/src/app/components/navigation/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" style="display:flex; position:fixed;top:0;">
+<mat-toolbar color="primary" style="display:flex; position:fixed;top:0; z-index:100;">
   <div class="center-icons">
     <a mat-icon-button [routerLink]="routerLinkFeed" routerLinkActive="active">
       <mat-icon color="white">videogame_asset</mat-icon>
