--- a/src/app/components/global/post/post.component.css
+++ b/src/app/components/global/post/post.component.css
@@ -50,17 +50,9 @@
 }
 
 .isReply{
-  background-color:gray;
-  color:black;
-  border-radius:5px;
-  margin-left:1rem;
-  height: fit-content;
-  padding:0.5rem;
+  color:gray;
 }
 
-.isReply p{
-  margin-bottom:0;
-}
 
 @media (max-width:580px){
   .post{
