--- a/src/app/pages/general/feed/feed.component.css
+++ b/src/app/pages/general/feed/feed.component.css
@@ -11,7 +11,20 @@
     border-right:1px white solid;
 }
 
-.post{
+.tab-border{
     border-left:1px white solid;
     border-right:1px white solid;
+    z-index:0;
+}
+
+@media (max-width: 580px){
+    .tab-border{
+        border:0;
+    }
+}
+
+.mat-mdc-tab-group, .mat-mdc-tab-nav-bar{
+    --mat-tab-header-inactive-label-text-color: rgba(255,255,255,0.7);
+    --mat-tab-header-inactive-focus-label-text-color: white;
+    --mat-tab-header-inactive-hover-label-text-color: white;
 }
