--- a/src/app/pages/post/post-detail/post-detail.component.css
+++ b/src/app/pages/post/post-detail/post-detail.component.css
@@ -75,3 +75,9 @@
   border-left:1px white solid;
   border-right:1px white solid;
 }
+
+@media (max-width: 580px){
+  .post-border{
+    border:0;
+  }
+}
