--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -49,7 +49,9 @@
               color="white"
             >
               <mat-icon>edit</mat-icon>
-              Edit Profile
+              <span class="action-button-label">
+                Edit Profile
+              </span>
             </button>
             <button
               *ngIf="!isLoggedUser"
@@ -86,8 +88,20 @@
       </div>
       <mat-divider></mat-divider>
     </div>
-      <ng-container *ngIf="posts.length > 0">
-        <app-post *ngFor="let post of posts" [post]="post"> </app-post>
+      <ng-container class="post-container" *ngIf="posts.length > 0">
+        <div class="tab-border">
+          <mat-tab-group>
+            <mat-tab label="Posts">
+              <app-post class="post-view" *ngFor="let post of posts" [post]="post"> </app-post>
+            </mat-tab>
+            <mat-tab label="Comments">
+              <app-post *ngFor="let post of comments" [post]="post"> </app-post>
+            </mat-tab>
+            <mat-tab label="Media">
+              <app-post *ngFor="let post of media" [post]="post"> </app-post>
+            </mat-tab>
+          </mat-tab-group>
+        </div>
       </ng-container>
       <ng-container *ngIf="posts.length == 0">
         <div class="no-posts">
