you can tag people now :D

--- a/src/app/components/global/post/post.component.css
+++ b/src/app/components/global/post/post.component.css
@@ -12,6 +12,11 @@
   margin-bottom: 0rem;
 }
 
+.usernameLink{
+  color:--var(lighter-background-color);
+  text-decoration:none;
+}
+
 .userInfo {
   display: flex;
   flex-direction: row;
