--- a/src/app/components/global/post/post.component.html
+++ b/src/app/components/global/post/post.component.html
@@ -47,7 +47,7 @@
     </mat-menu>
   </div>
   <div class="postContent" (click)="goToPost()">
-    <p style="font-size: 1rem; white-space: pre-line">
+    <p #content style="font-size: 1rem; white-space: pre-line">
       {{ this.post?.content }}
     </p>
     <img *ngIf="this.post?.mediaUrl" src="{{ this.post?.mediaUrl }}" alt="" />
