--- a/src/app/components/new-post-exploreview/new-post-exploreview.component.css
+++ b/src/app/components/new-post-exploreview/new-post-exploreview.component.css
@@ -11,6 +11,31 @@
   align-items: center;
 }
 
+.img-exists{
+  width:100px;
+  height:100px;
+  position:relative;
+}
+
+.img-exists img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+}
+
+.image-exists-icon{
+  top: 0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:1;
+  position:absolute;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background-color: rgba(255,255,255,0.25);
+}
+
 .userInfo {
   margin-top: 1rem;
   display: flex;
