--- a/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.css
+++ b/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.css
@@ -13,6 +13,31 @@
   margin-bottom: 1rem;
 }
 
+.img-exists{
+  width:75px;
+  height:75px;
+  position:relative;
+}
+
+.img-exists img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+}
+
+.image-exists-icon{
+  top: 0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:1;
+  position:absolute;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background-color: rgba(255,255,255,0.25);
+}
+
 .mat-mdc-raised-button > .mat-icon {
   margin-left: 0 !important;
   margin-right: 0 !important;
