community creation may or may not be working, only god and the database know if it worked and ion have access to the database

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -7,8 +7,15 @@
   [mode]="this.isMobile ? 'push' : 'side'"
   [opened]="!this.isMobile"
 >
-  <mat-nav-list>
-    <div class="icons"></div>
+  <mat-nav-list style="margin-top:0;">
+    <div class="icons">
+      <div class="community-header">
+        <mat-icon style="color:white;">groups</mat-icon>
+        <mat-divider></mat-divider>
+      </div>
+      <div class="community-list">
+      </div>
+    </div>
     <div class="bottom-icons">
       <mat-divider></mat-divider>
       <div class="create-community-icon">
