--- a/src/app/components/navigation/sidenav/sidenav.component.css
+++ b/src/app/components/navigation/sidenav/sidenav.component.css
@@ -1,13 +1,32 @@
 .sidenav {
-  height: 100%;
+  height:calc(100vh - 64px) !important;
   background-color: #673ab7;
   width: 75px;
   display: flex;
+  position:fixed;
+  top:64px !important;
+  left:0 !important;
+}
+
+.community-header{
+  width:100%;
+}
+
+.community-list{
+  width:100%;
+  overflow-y:scroll;
+}
+
+.community-header mat-icon{
+  margin:0 25px;;
 }
 
 .icons {
-  width: 50%;
-  margin: 0 auto;
+  width: 100%;
+  align-items:center;
+  display:flex;
+  flex-direction:column;
+  height:calc(100vh - 70.5px - 64px);
 }
 
 .bottom-icons {
