whatever I wrote on commit

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -7,7 +7,8 @@
   [mode]="this.isMobile ? 'push' : 'side'"
   [opened]="!this.isMobile"
 >
-  <mat-nav-list style="margin-top:0;">
+  <mat-nav-list style="padding-top:0;">
+    <mat-divider></mat-divider>
     <div class="icons">
       <div class="community-header">
         <mat-icon style="color:white;">groups</mat-icon>
