--- a/src/app/pages/general/feed/feed.component.css
+++ b/src/app/pages/general/feed/feed.component.css
@@ -23,6 +23,30 @@
     }
 }
 
+.spinnerBox{
+    position:absolute;
+    background-color:rgba(0,0,0,0.5);
+    z-index:100000;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    width:100%;
+    height:100%;
+    right:0;
+    bottom:0;
+}
+
+.page-loading{
+    height:calc(100vw - 64px);
+    overflow: hidden;
+}
+
+.finish{
+    height:auto !important;
+    overflow-y:scroll !important;
+
+}
+
 .mat-mdc-tab-group, .mat-mdc-tab-nav-bar{
     --mat-tab-header-inactive-label-text-color: rgba(255,255,255,0.7);
     --mat-tab-header-inactive-focus-label-text-color: white;
