--- a/src/app/pages/general/feed/feed.component.html
+++ b/src/app/pages/general/feed/feed.component.html
@@ -1,11 +1,16 @@
-<div class="post-wrapper">
-    <app-new-post-exploreview class="new-post" *ngIf="!isMobile" (refreshPosts)="refreshPosts()"></app-new-post-exploreview>
-    <mat-tab-group class="tab-border">
-        <mat-tab label="For You">
-            <app-post *ngFor="let post of posts" [post]="post"></app-post>
-        </mat-tab>
-        <mat-tab label="Following">
-            <app-post *ngFor="let post of followingPosts" [post]="post"></app-post>
-        </mat-tab>
-    </mat-tab-group>
+<div class="page-loading" id="loadingStop"> 
+    <div class="spinnerBox" *ngIf="isLoading">
+        <mat-spinner></mat-spinner>
+    </div>
+    <div class="post-wrapper">
+        <app-new-post-exploreview class="new-post" *ngIf="!isMobile" (refreshPosts)="refreshPosts()"></app-new-post-exploreview>
+        <mat-tab-group class="tab-border">
+            <mat-tab label="For You">
+                <app-post *ngFor="let post of posts" [post]="post"></app-post>
+            </mat-tab>
+            <mat-tab label="Following">
+                <app-post *ngFor="let post of followingPosts" [post]="post"></app-post>
+            </mat-tab>
+        </mat-tab-group>
+    </div>
 </div>
