--- a/src/app/pages/general/feed/feed.component.css
+++ b/src/app/pages/general/feed/feed.component.css
@@ -21,30 +21,24 @@
     .tab-border{
         border:0;
     }
+    .page-loading{
+        height:calc(100vh - 112px) !important;
+    }
 }
 
-.spinnerBox{
+
+.page-loading{
     position:absolute;
-    background-color:rgba(0,0,0,0.5);
-    z-index:100000;
+    top:0;
+    left:0;
+    z-index:999999;
+    width:100%;
+    height:calc(100vh - 64px);
     display:flex;
     align-items:center;
     justify-content: center;
-    width:100%;
-    height:100%;
-    right:0;
-    bottom:0;
-}
-
-.page-loading{
-    height:calc(100vw - 64px);
-    overflow: hidden;
-}
-
-.finish{
-    height:auto !important;
-    overflow-y:scroll !important;
-
+    background-color:rgba(0,0,0,0.8);
+    overflow:hidden;
 }
 
 .mat-mdc-tab-group, .mat-mdc-tab-nav-bar{
