you can see community list wowzers

--- a/src/app/components/navigation/sidenav/sidenav.component.css
+++ b/src/app/components/navigation/sidenav/sidenav.component.css
@@ -17,6 +17,15 @@
   overflow-y:scroll;
 }
 
+.communityIcon{
+  width:45px;
+  height:45px;
+  margin:13.5px;
+  border-radius:50%;
+  border:var(--accent-color) 1px solid;
+  overflow:hidden;
+}
+
 .community-header mat-icon{
   margin:15px 25px;
 }
